--- a/read.html
+++ b/read.html
@@ -49,9 +49,12 @@
             <input type="email" name="email" id="email" placeholder="Mail">
 
             <button type="submit">Read</button>
-            <!-- <a href="home.html">Back</a> -->
+
+
+
         </form>
     </div>
+    <a href="/home" class="btn btn-primary">Back</a>
 </body>
 
 </html>
