--- a/update.html
+++ b/update.html
@@ -109,11 +109,12 @@
             <label for="dou">Date updated</label>
             <input type="text" name="dou" id="dou" placeholder="DOu">
 
-            <button type="submit">Register</button>
-            <!-- <a href="home.html">Back</a> -->
+            <button type="submit">update</button>
+
         </form>
+
     </div>
-    <!-- <script src="profile.js"></script> -->
+    <a href="/home" class="btn btn-primary">Back</a>
 </body>
 
 </html>
